--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@types/aws-sdk": "^2.7.0",
+    "@types/nodemailer": "^6.4.15",
+    "aws-sdk": "^2.1659.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "fs": "^0.0.1-security",
@@ -31,6 +34,7 @@
     "mongoose": "^8.5.1",
     "net": "^1.0.2",
     "next": "14.2.5",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
     "react-email-editor": "^1.7.11",
