--- a/package.json
+++ b/package.json
@@ -22,14 +22,21 @@
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@stripe/stripe-js": "^4.1.0",
     "@types/aws-sdk": "^2.7.0",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemailer": "^6.4.15",
     "aws-sdk": "^2.1659.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "fs": "^0.0.1-security",
     "http2": "^3.3.7",
+    "jotai": "^2.9.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.408.0",
     "mongoose": "^8.5.1",
     "net": "^1.0.2",
@@ -41,6 +48,7 @@
     "react-hot-toast": "^2.4.1",
     "recharts": "^2.12.7",
     "stargate-mongoose": "^0.6.3",
+    "stripe": "^16.2.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "timeago": "^1.6.7",
